--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <groupId>mybank.com</groupId>
   <artifactId>credit</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packging>war</packging>
+  <packaging>war</packaging>
 
   <name>credit</name>
   <!-- FIXME change it to the project's website -->
